syntax = "proto3";

package registration;

service Register {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
}

message RegisterUserRequest {
    string email = 1;
    string password = 2;
}

message RegisterUserResponse {
    string message = 1;
}